syntax = "proto3";

package user;

option go_package = "user";

service UserService {
  rpc Create(User) returns (User);
  rpc Update(UserRequest) returns (User);
  rpc Delete(UserRequest) returns (User);
  rpc Get(UserRequest) returns (User);
  rpc GetAll(GetAllUsersRequest) returns (GetAllUsersResponse);
}

message GetAllUsersRequest {
  int64 page = 1;
  int64 limit = 2;
}

message GetAllUsersResponse {
  repeated User allUsers = 1;
}

message UserRequest {
  string userId = 1;
}

message User {
  string id = 1;
  string name = 2;
  string last_name = 3;
}
